fix(top-nav): increase z-index
Puzzle and preview could be scrolled over top menu.

--- a/client/script/components/top-menu/style.css
+++ b/client/script/components/top-menu/style.css
@@ -8,6 +8,7 @@
   top: 0;
   width: 100vw;
   align-items: center;
+  z-index: 1000;
 }
 
 .hpu-logo {
